--- a/examples/pages-with-sidebar/index.html
+++ b/examples/pages-with-sidebar/index.html
@@ -36,7 +36,7 @@
         }
     };
 
-    var router = new Router.default({
+    var router = new Router({
         modulesConfig: modules,
         pagesConfig: pages
     });
