Do not accept bare * as regex path

--- a/examples/pages-with-sidebar/index.html
+++ b/examples/pages-with-sidebar/index.html
@@ -18,7 +18,7 @@
     <the-sidebar></the-sidebar>
     <router-component>
         <second-page path="page/2"></second-page>
-        <home-page path="*"></home-page>
+        <home-page path=".*"></home-page>
     </router-component>
 
 </body>
