Change browser url and navigate to page when clicking link

--- a/examples/webcomponents-with-sidebar/index.html
+++ b/examples/webcomponents-with-sidebar/index.html
@@ -1,6 +1,18 @@
 <html>
 <head>
-    <link rel="stylesheet" href="main.css" />
+    <style>
+        body {
+            display: flex;
+        }
+
+        the-sidebar {
+            background: rgb(211, 211, 211);
+            width: 190px;
+            display: flex;
+            flex-direction: column;
+        }
+
+    </style>
     <script type="module" src="../../dist/router-component.js"></script>
     <script type="module" src="./home-page.js"></script>
     <script type="module" src="./second-page.js"></script>
