Support search params and capture groups + add example

--- a/examples/pages-with-sidebar/index.html
+++ b/examples/pages-with-sidebar/index.html
@@ -22,7 +22,7 @@
         // setup link clicks for the sidebar
         const router = document.querySelector('router-component');
         const sidebar = document.querySelector('the-sidebar');
-        router.setupLinks(sidebar);
+        router.bindLinks(sidebar);
     </script>
 </head>
 <body>
