--- a/examples/nested-tabs/index.html
+++ b/examples/nested-tabs/index.html
@@ -1,34 +1,42 @@
 <html>
-<head>
-    <base href="/examples/nested-tabs/" />
-    <style>
-        body {
-            display: flex;
-        }
-
-        tab-page {
-            display: flex;
-            flex-direction: column;
-        }
-    </style>
-    <script type="module" src="../../dist/router-component.js"></script>
-
-    <script>
-        customElements.define('tab-one', class extends HTMLElement {
-            connectedCallback() {
-                this.innerHTML = 'tab one!';
+    <head>
+        <base href="/examples/nested-tabs/" />
+        <style>
+            body {
+                display: flex;
             }
-        })
 
-        customElements.define('tab-two', class extends HTMLElement {
-            connectedCallback() {
-                this.innerHTML = 'tab two!';
+            tab-page {
+                display: flex;
+                flex-direction: column;
             }
-        })
+        </style>
+        <script type="module" src="../../dist/router-component.js"></script>
 
-        customElements.define('tab-page', class extends HTMLElement {
-            connectedCallback() {
-                this.innerHTML = `
+        <script>
+            customElements.define(
+                'tab-one',
+                class extends HTMLElement {
+                    connectedCallback() {
+                        this.innerHTML = 'tab one!';
+                    }
+                }
+            );
+
+            customElements.define(
+                'tab-two',
+                class extends HTMLElement {
+                    connectedCallback() {
+                        this.innerHTML = 'tab two!';
+                    }
+                }
+            );
+
+            customElements.define(
+                'tab-page',
+                class extends HTMLElement {
+                    connectedCallback() {
+                        this.innerHTML = `
                     <nav>
                         <a href="tabs/one">Tab 1</a>
                         <a href="tabs/two">Tab 2</a>
@@ -38,15 +46,14 @@
                       <tab-two path="tabs/two"></tab-two>
                     </router-component>
                 `;
-            }
-        })
-    </script>
-</head>
-<body>
-
-    <router-component>
-        <tab-page path="nested-tabs/?$"></tab-page>
-    </router-component>
-
-</body>
+                    }
+                }
+            );
+        </script>
+    </head>
+    <body>
+        <router-component>
+            <tab-page path="nested-tabs/?$"></tab-page>
+        </router-component>
+    </body>
 </html>
